--- a/part-3/rails-app/app/views/invitations/new.html.haml
+++ b/part-3/rails-app/app/views/invitations/new.html.haml
@@ -13,3 +13,10 @@
       = @invalid_recipients.join(', ')
 
   = f.submit 'Notify Recipients'
+
+%footer
+  - current_user = User.find_by(id: session[:user_id])
+  - if current_user&.admin?
+    = link_to 'View Report', admin_report_path(@report)
+  - else
+    = link_to 'View Report', report_path(@report)
