--- a/part-3/rails-app/app/views/invitations/new.html.haml
+++ b/part-3/rails-app/app/views/invitations/new.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for object, as: :invitation, url: invitations_path(@report) do |f|
+= simple_form_for object, as: :invitation, url: invitations_path(page.report_id) do |f|
   = f.input :comment, as: :text
 
   = f.input :recipients, as: :text, input_html: { value: object.recipients&.join(', ') }, error: "Invalid email addresses: #{object.invalid_recipients.join(', ')}"
